Crash in [@ nsPrintJob::UpdateSelectionAndShrinkPrintObject]
Categories
(Core :: Print Preview, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | verified |
| firefox81 | --- | verified |
People
(Reporter: alice0775, Assigned: emilio)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(3 files)
|
28.87 KB,
text/plain
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-3ff79794-67a2-4d38-857b-5fc710200727.
Top 10 frames of crashing thread:
0 xul.dll nsPrintJob::UpdateSelectionAndShrinkPrintObject layout/printing/nsPrintJob.cpp:1845
1 xul.dll nsPrintJob::ReconstructAndReflow layout/printing/nsPrintJob.cpp:1414
2 xul.dll nsPrintJob::SetupToPrintContent layout/printing/nsPrintJob.cpp:1464
3 xul.dll nsPrintJob::FinishPrintPreview layout/printing/nsPrintJob.cpp:2804
4 xul.dll nsPrintJob::MaybeResumePrintAfterResourcesLoaded layout/printing/nsPrintJob.cpp:1725
5 xul.dll nsPrintJob::OnStateChange layout/printing/nsPrintJob.cpp:1746
6 xul.dll nsDocLoader::DoFireOnStateChange uriloader/base/nsDocLoader.cpp:1331
7 xul.dll nsDocLoader::FireOnStateChange uriloader/base/nsDocLoader.cpp:1294
8 xul.dll nsDocLoader::doStopURLLoad uriloader/base/nsDocLoader.cpp:898
9 xul.dll nsDocLoader::OnStopRequest uriloader/base/nsDocLoader.cpp:622
STR:
- Open about:preferences
- File > Print Preview
--- Observe, Print preview preparing would not finish forever --- maybe another bug. - Click on [X] button of main browser window controls
OR - Cancel print preview preparing dialog and click on [Close] button of print preview toolbar
Actual Results:
Browser crashes
Expected results:
Print preview will close, and return to normal browser
| Reporter | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Comment 2•5 years ago
|
||
Seems the same as bug 1655179, which should be in the next nightly. Is it fixed by it?
| Reporter | ||
Comment 3•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #2)
Seems the same as bug 1655179, which should be in the next nightly. Is it fixed by it?
I can still reproduce the crash on Nightly80.0a1(20200727095125)
bp-d7cd91ac-f2c1-48aa-8af9-240270200727
about:buildconfig
Build Configuration
Source
Built from https://hg.mozilla.org/mozilla-central/rev/798bdad605b985a71cd204a56bb816dea503d432
Build platform
target
x86_64-pc-mingw32
*snip*
| Assignee | ||
Comment 4•5 years ago
|
||
Oh, indeed, hadn't realized that patch had made it to nightly already. I can repro too, and looking then, thank you for filing this!
| Assignee | ||
Comment 5•5 years ago
|
||
When we create a static document for printing, we clone all elements,
including <link rel=localization>. This means that
LocalizationLinkAdded/Removed etc do run for these documents.
However these documents don't come from the parser, which means that
we do block layout, but TriggerInitialTranslation and such do not run.
So we leave a stray onload blocker that we wait for as of bug 1648064,
so we wait forever and that is obviously not good.
Prevent these documents from using l10n, so as to avoid the problematic
situation.
| Assignee | ||
Comment 6•5 years ago
|
||
This is a pre-existing issue that could already happen before the
regressing bug but seems worth addressing anyways.
If we're destroying we're definitely not going to be able to print, so
return an error rather than crashing in funny ways otherwise.
Depends on D85038
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•5 years ago
|
Comment 10•5 years ago
|
||
| bugherder | ||
Comment 11•5 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 12•5 years ago
|
||
Comment on attachment 9166368 [details]
Bug 1655474 - Prevent static documents from using l10n. r=zbraniecki
Beta/Release Uplift Approval Request
- User impact if declined: crashes / infinite-loading when printing built-in images.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This patch on its own is pretty low-risk and it's early in the cycle, but if more stability issues come up with the regressing bug we should be ready to back it out.
- String changes made/needed: none
| Assignee | ||
Updated•5 years ago
|
Comment 13•5 years ago
|
||
Comment on attachment 9166368 [details]
Bug 1655474 - Prevent static documents from using l10n. r=zbraniecki
approved for 80.0b3
Updated•5 years ago
|
Comment 14•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 15•5 years ago
|
||
Reproduced this issue using Firefox 81.0a1 (BuildId:20200727203201) on Ubuntu 18.04 64bit.
This issue is verified fixed using Firefox 81.0a1 (BuildId:20200802214843) and Firefox 80.0b3 (BuildId:20200803045446) on Windows 10 64bit & Ubuntu 18.04 64bit.
Description
•